--- a/package.json
+++ b/package.json
@@ -52,11 +52,15 @@
     "devDependencies": {
         "@types/node": "^20.10.0",
         "@vitejs/plugin-react-swc": "^3.10.2",
+        "gh-pages": "^6.3.0",
         "vite": "6.3.5"
     },
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
-    }
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "homepage": "https://prabhat-barman.github.io/Rivaya"
 }
